[package]
name = "json2tm"
version = "0.1.1"
edition = "2021"
description = "VSCode compiled theme -> .tmTheme converter"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/json2tm/"
keywords = ["cli", "textmate", "tmtheme", "plist", "vscode"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
json_comments = "0.2.1"
plist = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"

[profile.release]
strip = true
lto = true
codegen-units = 1
